--- a/计算机图形学/1.OpenGL_HelloWorld/Homework/Code/code/code.vcxproj.filters
+++ b/计算机图形学/1.OpenGL_HelloWorld/Homework/Code/code/code.vcxproj.filters
@@ -18,7 +18,19 @@
     <ClCompile Include="glad.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="hw1.cpp">
+    <ClCompile Include="Hello Window.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Hello Triangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Shaders.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Textures.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Textures_2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
